vdoc: fix scrolling on keyboard select in search results with overflow (#22352)

--- a/cmd/tools/vdoc/theme/doc.css
+++ b/cmd/tools/vdoc/theme/doc.css
@@ -311,6 +311,9 @@ hr {
 .doc-nav > .content a:hover {
 	text-decoration: underline;
 }
+.doc-nav .search {
+	overflow: scroll;
+}
 .doc-nav .search.hidden {
 	display: none;
 }
